Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jigsaw: El Juego Continua -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Espiral: El juego del miedo continua -->
+<li>
+  <a href="../Peliculas/pelicula592.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/97WyFdS8pQerysSSGezafXHW5ZH.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Espiral: El juego del miedo continúa 2021</span>
+    <span class="hidden">Un detective y su compañero investigan unos espeluznantes asesinatos que recuerdan inquietantemente al pasado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Jigsaw: El Juego Continua -->
 <li>
   <a href="../Peliculas/pelicula591.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
