Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Saw X: El juego del miedo -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Transformers -->
+<li>
+  <a href="../Peliculas/pelicula594.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jNZOozjyWKC0jTTvpZ3KOobGcED.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Transformers 2007</span>
+    <span class="hidden">El joven adolescente Sam Witwicky se ve envuelto en la antigua lucha entre dos facciones extraterrestres de robots transformables: los heroicos Autobots y los malvados Decepticons. Sam tiene la clave para acceder a un poder inimaginable y los Decepticons no se detendrán ante nada para recuperarla.</span>
+  </a>
+</li>
+<!--FIN--><!-- Saw X: El juego del miedo -->
 <li>
   <a href="../Peliculas/pelicula593.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
