Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Transformers: la venganza de los caidos -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Transformers: el lado oscuro de la luna -->
+<li>
+  <a href="../Peliculas/pelicula596.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fMqXNNgzTaxalU1ve9KevpELiGe.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Transformers: el lado oscuro de la luna 2011</span>
+    <span class="hidden">En esta tercera entrega de la saga Transformers, los Autobots y los Decepticons se ven envueltos en una peligrosa carrera espacial en la Tierra entre los EE.UU. y Rusia, donde un acontecimiento amenaza con provocar una guerra tan grande que ni los propios transformers puede que sean capaces de salvar nuestro planeta. Y una vez más, como casi siempre, Sam Witwicky se encuentra involuntariamente en medio del conflicto.</span>
+  </a>
+</li>
+<!--FIN--><!-- Transformers: la venganza de los caidos -->
 <li>
   <a href="../Peliculas/pelicula595.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
