--- a/HOME/login.html
+++ b/HOME/login.html
@@ -50,6 +50,15 @@
   }
 
 </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PC9JETB0VP');
+</script>
 </head>
 <body class="min-h-screen flex flex-col justify-between relative overflow-hidden">
 
