--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -72,7 +72,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Transformers 5: El Ultimo Caballero -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Transformers: El despertar de las bestias -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula599.html">
+    <img src="https://image.tmdb.org/t/p/original/peIB7KBBrqW0JsCLQBt9ChEtZ7m.jpg" alt="Transformers: El despertar de las bestias" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Transformers: El despertar de las bestias</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- Transformers 5: El Ultimo Caballero -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula598.html">
     <img src="https://image.tmdb.org/t/p/original/mXEBnMqFwTJCrddVhknCH9fq3fB.jpg" alt="Transformers 5: El Ultimo Caballero" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
