--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Transformers: El despertar de las bestias -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bumblebee -->
+<li>
+  <a href="../Peliculas/pelicula600.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lOW8vBMJqWHWcMxHbigVAytqiBn.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bumblebee 2018</span>
+    <span class="hidden">Sexta entrega de la saga 'Transformers', esta vez centrada en el "hermano pequeño" de los Autobots, Bumblebee. Tratando de escapar, en el año 1987, Bumblebee encuentra refugio en un depósito de chatarra en una pequeña ciudad en la costa Californiana. Charlie (Hailee Steinfeld), a punto de cumplir 18 años y tratando de encontrar su lugar en el mundo, descubre a Bumblebee, dañado durante una batalla y descompuesto. Cuando Charlie lo revive, aprende rápidamente que éste no es un VW amarillo ordinario.</span>
+  </a>
+</li>
+<!--FIN--><!-- Transformers: El despertar de las bestias -->
 <li>
   <a href="../Peliculas/pelicula599.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
