--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -73,7 +73,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Minions: Nace un villano -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Transformers Uno -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula601.html">
+    <img src="https://image.tmdb.org/t/p/original/1jzVCZxBmgvpGILuEU8icfX77Io.jpg" alt="Transformers Uno" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Transformers Uno</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Minions: Nace un villano -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula583.html">
     <img src="https://image.tmdb.org/t/p/original/fzwG3cukayxKpCK0lqS1jkSBqJk.jpg" alt="Minions: Nace un villano" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
