Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Transformers Uno -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Titanic -->
+<li>
+  <a href="../Peliculas/pelicula602.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/VMOt5scbGmBKDvkfHjZN6Ki54i.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Titanic 1997</span>
+    <span class="hidden">El romance florece entre Jack Dawson y Rose DeWitt Bukater en el esplendoroso transatlántico RMS Titanic. Su amor, como el barco, desafía las olas del destino. Pero cuando el Titanic choca con el iceberg, su historia se convierte en una épica de sacrificio y supervivencia, en la que el amor perdurará más allá de las profundidades del mar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Transformers Uno -->
 <li>
   <a href="../Peliculas/pelicula601.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
