--- a/Plataforma/dreamworks/index.html
+++ b/Plataforma/dreamworks/index.html
@@ -159,7 +159,27 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Norbit -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Transformers: la venganza de los caidos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula595.html">
+    <img src="https://image.tmdb.org/t/p/original/qzEIlhHivIcpKhKVOkb61eBz2Mv.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Transformers: la venganza de los caídos</div>
+  <div class="text-xs text-white/70">2009</div>
+</article><!-- Transformers -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula594.html">
+    <img src="https://image.tmdb.org/t/p/original/jNZOozjyWKC0jTTvpZ3KOobGcED.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Transformers</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Norbit -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula511.html">
     <img src="https://image.tmdb.org/t/p/original/cCAeo4Yx2osjmj2YHNUyQmZJxdj.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
