--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Titanic -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dracula: La Historia Jamas Contada -->
+<li>
+  <a href="../Peliculas/pelicula603.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gEJqywFJ6NC7udiUYoB1Z0we2LV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Drácula: La Historia Jamás Contada 2014</span>
+    <span class="hidden">El príncipe Vlad Tepes intercambia su humanidad por el poder para defender su tierra y gente de las fuerzas rudas del Imperio Otomano.</span>
+  </a>
+</li>
+<!--FIN--><!-- Titanic -->
 <li>
   <a href="../Peliculas/pelicula602.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
