Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Mejor Jugador -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El hombre del saco -->
+<li>
+  <a href="../Peliculas/pelicula606.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3EdqlGB2ACpnqsrtKhyacaPhzHK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El hombre del saco 2023</span>
+    <span class="hidden">Tras la muerte de su padre, tres hermanos se mudan con su madre a un pequeño pueblo. Pronto descubren que en los últimos meses allí se han producido misteriosas desapariciones de varios niños y se embarcarán en una aventura a contrarreloj para descubrir la verdad que se esconde tras la terrorífica leyenda del que se conoce como El Hombre del Saco.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Mejor Jugador -->
 <li>
   <a href="../Peliculas/pelicula605.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
