--- a/Categorias/romance/index.html
+++ b/Categorias/romance/index.html
@@ -41,7 +41,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Titanic -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- No Game, No Life: Zero -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula608.html">
+    <img src="https://image.tmdb.org/t/p/original/nh9idfkptG4qMib1ObRmCuSMC8B.jpg" alt="No Game, No Life: Zero" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">No Game, No Life: Zero</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- Titanic -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula602.html">
     <img src="https://image.tmdb.org/t/p/original/VMOt5scbGmBKDvkfHjZN6Ki54i.jpg" alt="Titanic" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
