--- a/Plataforma/anime/index.html
+++ b/Plataforma/anime/index.html
@@ -44,7 +44,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Siete Pecados Capitales -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- No Game, No Life: Zero -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula608.html">
+    <img src="https://image.tmdb.org/t/p/original/nh9idfkptG4qMib1ObRmCuSMC8B.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">No Game, No Life: Zero</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- Los Siete Pecados Capitales -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Series/serie62.html">
     <img src="https://image.tmdb.org/t/p/original/yhmHgYvxj1Xez3q6pJKxQVFiP4S.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
