--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Interestelar -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- No Game, No Life: Zero -->
+<li>
+  <a href="../Peliculas/pelicula608.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nh9idfkptG4qMib1ObRmCuSMC8B.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">No Game, No Life: Zero 2017</span>
+    <span class="hidden">En Disboard, un joven guerrero hace amistad con una ex machina y emprende una horrorosa misión para detener una guerra mundial e impedir que se extinga la humanidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Interestelar -->
 <li>
   <a href="../Peliculas/pelicula607.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
