--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -72,7 +72,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Soy Leyenda -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula609.html">
+    <img src="https://image.tmdb.org/t/p/original/8g56u2k9CvMHP5IG257QVj9gj1b.jpg" alt="Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira-" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira-</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Soy Leyenda -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula604.html">
     <img src="https://image.tmdb.org/t/p/original/pO1SrJgf5BumqcIRkYviSGIFdmX.jpg" alt="Soy Leyenda" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
