--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- No Game, No Life: Zero -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- -->
+<li>
+  <a href="../Peliculas/pelicula609.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8g56u2k9CvMHP5IG257QVj9gj1b.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- 2024</span>
+    <span class="hidden">Tanjiro se somete a un riguroso entrenamiento con el Hashira de Piedra, Himejima, en su búsqueda por convertirse en un Hashira. Mientras tanto, Muzan sigue buscando a Nezuko y Ubuyashiki.</span>
+  </a>
+</li>
+<!--FIN--><!-- No Game, No Life: Zero -->
 <li>
   <a href="../Peliculas/pelicula608.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
