Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bienvenidos al Club -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Simpson en Plusniversario -->
+<li>
+  <a href="../Peliculas/pelicula612.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/y48Hg3jyL0TljAlRdSa0AX2PbcQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Simpson en Plusniversario 2021</span>
+    <span class="hidden">Los Simpson organizan una fiesta para el Día de Disney+ y todos estan invitados, excepto Homero. Con amigos de toda la plataforma y la música adecuada para una princesa de Disney, el Plusniversario es el evento del año de Springfield.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bienvenidos al Club -->
 <li>
   <a href="../Peliculas/pelicula611.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
