Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Simpson en Plusniversario -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Simpson: El Bueno, El Bart Y El Loki -->
+<li>
+  <a href="../Peliculas/pelicula613.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/u10ZfFwbCMB4UrFy7OlHq08fBRr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Simpson: El Bueno, El Bart Y El Loki 2021</span>
+    <span class="hidden">Loki es desterrado de Asgard una vez más y debe enfrentarse a sus oponentes más duros hasta ahora: los Simpson y los héroes más poderosos de Springfield. El dios de la travesura se une a Bart Simpson en el evento cruzado definitivo que rinde homenaje al universo cinematográfico de Marvel de superhéroes y villanos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Simpson en Plusniversario -->
 <li>
   <a href="../Peliculas/pelicula612.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
