--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/9RAdZn1pfRkeVSDwngvIQKsZd2Z.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Cruzada 2005</span>
-    <span class="hidden">Balian de Ibelin, un herrero francés se convierte en caballero durante las Cruzadas. En Tierra Santa, lucha por la paz y la justicia en medio del conflicto entre cristianos y musulmanes por el control de Jerusalén. Una historia épica de coraje, redención y sacrificio en medio del caos de la guerra.</span>
+    <span class="hidden">cruzadas el reino de los cielos Kingdom of Heaven Balian de Ibelin, un herrero francés se convierte en caballero durante las Cruzadas. En Tierra Santa, lucha por la paz y la justicia en medio del conflicto entre cristianos y musulmanes por el control de Jerusalén. Una historia épica de coraje, redención y sacrificio en medio del caos de la guerra.</span>
   </a>
 </li>
 <!--FIN--><!-- Planeta amarillo - Los Simpson -->
