Crear/Actualizar Categorias/romance/index.html

--- a/Categorias/romance/index.html
+++ b/Categorias/romance/index.html
@@ -41,7 +41,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Heart Eyes -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El abismo secreto -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula619.html">
+    <img src="https://image.tmdb.org/t/p/original/3s0jkMh0YUhIeIeioH3kt2X4st4.jpg" alt="El abismo secreto" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El abismo secreto</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Heart Eyes -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula617.html">
     <img src="https://image.tmdb.org/t/p/original/cQdfSHkmPnSS3AncCz13H0fCUoq.jpg" alt="Heart Eyes" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
