--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -160,7 +160,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <li>
   <a href="../Peliculas/pelicula625.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
-  src="https://image.tmdb.org/t/p/original/xBufdKzjdCpJkFg0NXPsdiihST.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+  src="https:https://www.themoviedb.org/t/p/w600_and_h900_bestv2/6YbTJhN5GJQOlZ1IyRiCyhKSiJE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Novocaine sin dolor 2025</span>
     <span class="hidden">Cuando la chica de sus sueños es secuestrada, un hombre común Nate convierte su incapacidad de no sentir dolor en una fortaleza inesperada en su lucha por recuperarla.</span>
   </a>
@@ -171,7 +171,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/dBuTvhQgbsoWEOGh50Bkf5qB58g.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Diamante de Sangre 2006</span>
-    <span class="hidden">Un pescador, un contrabandista y un sindicato de empresarios coinciden en la posesión de un diamante de valor incalculable.</span>
+    <span class="hidden">diamantes Un pescador, un contrabandista y un sindicato de empresarios coinciden en la posesión de un diamante de valor incalculable.</span>
   </a>
 </li>
 <!--FIN--><!-- Mickey 17 -->
@@ -180,7 +180,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/bgQt8SRHYxMPUF5M0VzE9Lp34W9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mickey 17 2025</span>
-    <span class="hidden">Mickey Barnes se encuentra en la extraordinaria circunstancia de trabajar para un empleador que exige el compromiso máximo con el trabajo⬦ morir, para ganarse la vida.</span>
+    <span class="hidden">micky mikey miky Mickey Barnes se encuentra en la extraordinaria circunstancia de trabajar para un empleador que exige el compromiso máximo con el trabajo⬦ morir, para ganarse la vida.</span>
   </a>
 </li>
 <!--FIN--><!-- Zootopia -->
@@ -189,7 +189,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/i3WnZpJkQYXXbSGplEGmyoyeskM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Zootopia 2016</span>
-    <span class="hidden">Decidida a demostrar su valía, la oficial Judy Hopps, la primera conejita de la fuerza policial de Zootopia, aprovecha la oportunidad de resolver su primer caso, incluso si eso significa asociarse con el zorro estafador Nick Wilde para resolver el misterio.</span>
+    <span class="hidden">zootropolis 1 Decidida a demostrar su valía, la oficial Judy Hopps, la primera conejita de la fuerza policial de Zootopia, aprovecha la oportunidad de resolver su primer caso, incluso si eso significa asociarse con el zorro estafador Nick Wilde para resolver el misterio.</span>
   </a>
 </li>
 <!--FIN--><!-- Viernes negro -->
@@ -234,7 +234,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/cQdfSHkmPnSS3AncCz13H0fCUoq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Heart Eyes 2025</span>
-    <span class="hidden">Dos compañeros de trabajo son confundidos con una pareja por un asesino en San Francisco el día de San Valentín. Obligados a eludir al asesino, navegan por el paisaje romántico de la ciudad mientras trabajan juntos para sobrevivir.</span>
+    <span class="hidden">ojos ojo de corazon corazones Dos compañeros de trabajo son confundidos con una pareja por un asesino en San Francisco el día de San Valentín. Obligados a eludir al asesino, navegan por el paisaje romántico de la ciudad mientras trabajan juntos para sobrevivir.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Simpson: La pelicula -->
@@ -243,7 +243,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/d9wHkwF9ttnNKuOoEIStve32jEk.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Simpson: La película 2007</span>
-    <span class="hidden">Homero debe salvar al mundo de una catástrofe que él mismo ha provocado. Todo comienza con Homero, su nueva mascota, un cerdo, y un silo lleno de excrementos que tiene una fuga, una combinación que desencadena un desastre distinto a todo lo que Springfield haya experimentado jamás. Mientras Marge está indignada por la monumental metedura de pata de su patán marido, una turba vengativa cae sobre el hogar de los Simpson...</span>
+    <span class="hidden">the simpsons Homero debe salvar al mundo de una catástrofe que él mismo ha provocado. Todo comienza con Homero, su nueva mascota, un cerdo, y un silo lleno de excrementos que tiene una fuga, una combinación que desencadena un desastre distinto a todo lo que Springfield haya experimentado jamás. Mientras Marge está indignada por la monumental metedura de pata de su patán marido, una turba vengativa cae sobre el hogar de los Simpson...</span>
   </a>
 </li>
 <!--FIN--><!-- Cruzada -->
