--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -160,7 +160,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <li>
   <a href="../Peliculas/pelicula625.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
-  src="https:https://www.themoviedb.org/t/p/w600_and_h900_bestv2/6YbTJhN5GJQOlZ1IyRiCyhKSiJE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/6YbTJhN5GJQOlZ1IyRiCyhKSiJE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Novocaine sin dolor 2025</span>
     <span class="hidden">Cuando la chica de sus sueños es secuestrada, un hombre común Nate convierte su incapacidad de no sentir dolor en una fortaleza inesperada en su lucha por recuperarla.</span>
   </a>
