Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El ladron de joyas -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Pecadores -->
+<li>
+  <a href="../Peliculas/pelicula627.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jIVa5m9s7bKYdI0KH8wFw1qLxHl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Pecadores 2025</span>
+    <span class="hidden">Intentando dejar atrás sus vidas problemáticas, los hermanos gemelos regresan a su pueblo natal para empezar de nuevo, solo para descubrir que un mal aún mayor los espera para darles la bienvenida.</span>
+  </a>
+</li>
+<!--FIN--><!-- El ladron de joyas -->
 <li>
   <a href="../Peliculas/pelicula626.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
