Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Pecadores -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Amigos De Armas -->
+<li>
+  <a href="../Peliculas/pelicula628.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jwBcQXp7WgYgrcANpnuLCCfLpkK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Amigos De Armas 2016</span>
+    <span class="hidden">Con la guerra en Irak en toda su furia, un joven ofrece a su amigo de la infancia la oportunidad de ganar mucho dinero al convertirse en un vendedor internacional de armas. Juntos, explotan una iniciativa del gobierno que permite a las empresas de participar en contratos militares. Pero pronto se verán involucrados en un asunto de alto nivel, después de obtener un contrato de 300 millones de dólares para abastecer a las fuerzas afganas, que los pone frente a personas sombrías.</span>
+  </a>
+</li>
+<!--FIN--><!-- Pecadores -->
 <li>
   <a href="../Peliculas/pelicula627.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
