--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/chIQxgimGbIFnuFsLqpcoTbsH9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Alarum: Código Letal 2025</span>
-    <span class="hidden">Joe y Lara Travers aparentan ser una pareja que está de vacaciones, pero esto no es lo que parece… realmente son unos espías encubiertos, pero no sabemos hasta qué punto, todo lo que sabemos es que están viajando armados hasta los dientes y definitivamente no son del tipo de la pareja promedio, y tampoco tienen idea de todo lo que pueden estar detrás de esta nueva misión.</span>
+    <span class="hidden">doble espionaje Joe y Lara Travers aparentan ser una pareja que está de vacaciones, pero esto no es lo que parece… realmente son unos espías encubiertos, pero no sabemos hasta qué punto, todo lo que sabemos es que están viajando armados hasta los dientes y definitivamente no son del tipo de la pareja promedio, y tampoco tienen idea de todo lo que pueden estar detrás de esta nueva misión.</span>
   </a>
 </li>
 <!--FIN--><!-- El contador 2 -->
